# bigdata_docker

./: README.md  docker-compose.yml
conf/master/: spark-defaults.conf
conf/worker/: spark-defaults.conf
data/: test_log1.csv
docs/: architecture.puml
master/: Dockerfile
master/work_dir/: datascience35.yaml  datascience36.yaml  datascience37.yaml  pyproject.toml  requirements.txt
master/work_dir/data/: test_log.csv
master/work_dir/notebooks/: Example.ipynb
master/work_dir/python_apps/example/: example.py  functions.py  main.py
master/work_dir/scala_apps/example/: pom.xml
master/work_dir/scala_apps/example/src/main/scala/stubs/: example.scala
